Viewport render first viewport scale wrong #36285

Closed
opened 2013-07-25 22:21:25 +02:00 by Thomas Szepe · 4 comments
Member

Category: Rendering

%%%If you set a scene which is rendering two viewports in a scene the first viewport renders with a wrong scale.
If the set scene is delayed between somewhere 1 and 5 the viewport mostly renders with the correct scale.

The problem only appears in the embedded player the standalone player (blenderplayer) is working.
The Fault was introduced somewhere between Blender 2.58a and 2.59.

%%%

**Category**: Rendering %%%If you set a scene which is rendering two viewports in a scene the first viewport renders with a wrong scale. If the set scene is delayed between somewhere 1 and 5 the viewport mostly renders with the correct scale. The problem only appears in the embedded player the standalone player (blenderplayer) is working. The Fault was introduced somewhere between Blender 2.58a and 2.59. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Thomas Szepe changed title from Viewport render viewport 1 scles wrong to Viewport render first viewport scale wrong 2015-03-25 10:30:48 +01:00

This issue was referenced by f5648f6db9

This issue was referenced by f5648f6db9f4549d9e3220f89361e5f76e5b2b2a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit f5648f6db9.

Closed by commit f5648f6db9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36285
No description provided.